# profly-api

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.ebextensions/: django.config
saveio/: manage.py
saveio/authentication/: cognito.py  exceptions.py
saveio/markets/: dtos.py  factories.py  services.py
saveio/markets/adapters/: yahoo.py
saveio/saveio/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
saveio/savings/: dtos.py  managers.py  models.py  schema.py  serializers.py  services.py  views.py
saveio/savings/migrations/: 0001_initial.py  0002_auto_20201227_0925.py  0003_auto_20201227_1036.py  0004_remove_transaction_value.py  0005_auto_20201229_1039.py
saveio/savings/schema/: connections.py  mutations.py  queries.py  types.py
src/: manage.py
src/authentication/: __init__.py  cognito.py  middlewares.py
src/currencies/: dtos.py  services.py
src/currencies/adapters/: __init__.py  yahoo.py
src/markets/: dtos.py  exceptions.py  factories.py  services.py
src/markets/adapters/: __init__.py  yahoo.py
src/profly/: asgi.py  models.py  schema.py  urls.py  views.py  wsgi.py
src/profly/settings/: base.py  debug.py  digitalocean.py  eb.py  local.py  prod.py
src/saveio/: asgi.py  urls.py  views.py  wsgi.py
src/saveio/settings/: debug.py  digitalocean.py  eb.py  elb.py
src/savings/: __init__.py  apps.py  managers.py  models.py  serializers.py  services.py  signals.py
src/savings/migrations/: 0001_initial.py  0002_extend_emotion_length.py  0003_rename_stocks_models.py
src/savings/schema/: __init__.py  mutations.py  queries.py  types.py
src/stocks/: debug.txt  managers.py  models.py  serializers.py  views.py
src/stocks/migrations/: 0001_initial.py  0002_extend_emotion_length.py  0003_rename_stocks_models.py
src/stocks/schema/: mutations.py  queries.py  types.py
